fix horizontal scroll bug with will-change

--- a/src/sass/partials/_chat.scss
+++ b/src/sass/partials/_chat.scss
@@ -258,6 +258,7 @@
         #bubbles {
             will-change: transform;
             width: 100%;
+            overflow: scroll;
 
             #bubbles-inner {
                 //will-change: transform;
